--- a/apps/sys/package.json
+++ b/apps/sys/package.json
@@ -54,7 +54,8 @@
     "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.0",
     "vaul": "^1.1.2",
-    "zod": "^3.25.49"
+    "zod": "^3.25.49",
+    "convex": "^1.24.8"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
